--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   uuid: ^4.4.0
   intl: ^0.19.0
+  pie_chart: ^5.4.0
 
 dev_dependencies:
   flutter_test:
